Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.1(EOL), 11.2(EOL)
-
None
Description
When a page in the temporary tablespace is freed (for example, due to DROP TEMPORARY TABLE), mtr_t::free() fails to mark the page status as buf_page_t::FREED. Due to this, InnoDB may fail to scrub the freed page (if innodb_immediate_scrub_data_uncompressed=ON) when buf_flush_space() is being invoked on the temporary tablespace.
Attachments
Issue Links
- blocks
-
MDEV-28699 Shrink temporary tablespaces without restart
-
- Closed
-
- relates to
-
MDEV-8139 Fix scrubbing
-
- Closed
-