10.6: MDEV-32151  InnoDB scrubbing doesn't write zero while freeing the page for temporary tablespace

- InnoDB fails to mark the page status as FREED during freeing
of page for temporary tablespace. This behaviour affects
scrubbing and doesn't write all zeroes in file even though
pages are freed.

mtr_t::free(): Mark the page as freed for temporary tablespace
also